--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ body.custom-background { background-color: #F1EBEB; }
 		<header id="masthead" class="site-header" role="banner">
 			<form role="search" method="get" class="searchform" action="https://valuesindesign.wordpress.com/">
 	<div class="searchform-wrapper">
-		<label><span class="screen-reader-text">Search for:</span>
+		<label><span class="screen-reader-text">Look for:</span>
 			<input type="text" placeholder="Type &amp; Hit Enter" name="s" title="Search for:">
 			<span class="icon">s</span>
 		</label>
