--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ body.custom-background { background-color: #F1EBEB; }
 		<header id="masthead" class="site-header" role="banner">
 			<form role="search" method="get" class="searchform" action="https://valuesindesign.wordpress.com/">
 	<div class="searchform-wrapper">
-		<label><span class="screen-reader-text">Look for:</span>
+		<label><span class="screen-reader-text">Search for:</span>
 			<input type="text" placeholder="Type &amp; Hit Enter" name="s" title="Search for:">
 			<span class="icon">s</span>
 		</label>
@@ -596,7 +596,7 @@ multi-disciplinary team…</p>
 	<div class="sidebar-inner">
 		<div class="widget-area">
 			<aside id="text-8" class="widget widget_text"><h6 class="widget-title">Welcome</h6>			<div class="textwidget"><div align="justify">
-<p>This site is a community resource for the study and implementation of
+<p>This site is a new community resource for the study and implementation of
  values in design (VID), reflecting a broad spectrum of theories, 
 methodologies and disciplinary approaches. We invite contributions from 
 researchers, practitioners, and public interest advocates. Please come 
