--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
   <link rel="dns-prefetch" href="https://wordpress.com/">
   <link rel="alternate" type="application/rss+xml" title="Values in Design » Feed" href="https://valuesindesign.wordpress.com/feed/">
   <link rel="alternate" type="application/rss+xml" title="Values in Design » Comments Feed" href="https://valuesindesign.wordpress.com/comments/feed/">
-  <script type="text/javascript" async="" src="ValuesinDesign_files/platform.js"></script>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+	    google_ad_client: "ca-pub-3721559613110931",
+	    enable_page_level_ads: true
+	  });
+	</script>
+	<script type="text/javascript" async="" src="ValuesinDesign_files/platform.js"></script>
   <script type="text/javascript">
     /* <![CDATA[ */
     function addLoadEvent(func)
@@ -892,7 +899,7 @@
               <h6 class="widget-title">Welcome</h6>
               <div class="textwidget">
                 <div align="justify">
-                  <p>This site is a community resource for the study and implementation of
+                  <p>This site is a new community resource for the study and implementation of
                     values in design (VID), reflecting a broad spectrum of theories,
                     methodologies and disciplinary approaches. We invite contributions from
                     researchers, practitioners, and public interest advocates. Please come
