--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 <link rel='dns-prefetch' href='https://s0.wp.com/' />
 <link rel="alternate" type="application/rss+xml" title="Values in Design &raquo; Feed" href="feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="Values in Design &raquo; Comments Feed" href="comments/feed/index.html" />
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+	    google_ad_client: "ca-pub-3721559613110931",
+	    enable_page_level_ads: true
+	  });
+	</script>
 	<script type="text/javascript">
 		/* <![CDATA[ */
 		function addLoadEvent(func) {
