--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Values in Design</title>
+	<title>Values in Design 2019</title>
 	<link rel="profile" href="http://gmpg.org/xfn/11" />
 	<link rel="pingback" href="https://valuesindesign.wordpress.com/xmlrpc.php" />
 	<!--[if lt IE 9]>
