--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <link rel='dns-prefetch' href='https://s2.wp.com/' />
 <link rel='dns-prefetch' href='https://s1.wp.com/' />
 <link rel='dns-prefetch' href='https://s0.wp.com/' />
-<link rel="alternate" type="application/rss+xml" title="Values in Design &raquo; Feed" href="feed/index.html" />
-<link rel="alternate" type="application/rss+xml" title="Values in Design &raquo; Comments Feed" href="comments/feed/index.html" />
+<link rel="alternate" type="application/rss+xml" title="Values in Design 2019 &raquo; Feed" href="feed/index.html" />
+<link rel="alternate" type="application/rss+xml" title="Values in Design 2019 &raquo; Comments Feed" href="comments/feed/index.html" />
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script>
 	  (adsbygoogle = window.adsbygoogle || []).push({
@@ -183,7 +183,7 @@ body.custom-background { background-color: #F1EBEB; }
 				<div class="site-title">
 		<div class="home-link">
 			<a href="index.html" title="Values in Design" rel="home">
-						<h1>Values in Design</h1>
+						<h1>Values in Design 2019</h1>
 				</a>
 			</div>
 	</div>
