--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ body.custom-background { background-color: #F1EBEB; }
 	<div class="sidebar-inner">
 		<div class="widget-area">
 			<aside id="text-8" class="widget widget_text"><h6 class="widget-title">Welcome</h6>			<div class="textwidget"><div align="justify">
-<p>This site is a community resource for the study and implementation of values in design (VID), reflecting a broad spectrum of theories, methodologies and disciplinary approaches. We invite contributions from researchers, practitioners, and public interest advocates. Please come back often and watch the site grow! &nbsp;</p>
+<p>This new site is a community resource for the study and implementation of values in design (VID), reflecting a broad spectrum of theories, methodologies and disciplinary approaches. We invite contributions from researchers, practitioners, and public interest advocates. Please come back often and watch the site grow! &nbsp;</p>
 
 <p>Support for the development of this website was provided by the NSF for the NSF EAGER: Values in Design in the Future Internet Architecture, CNS/NetS 1058333 and the Intel Science and Technology Center for Social Computing.</p></div></div>
 		</aside><aside id="linkcat-247076664" class="widget widget_links"><h6 class="widget-title">Links of Interest</h6>
