--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="google-site-verification" content="nKKgbHEMjMa4RCflYV9XwYVKrJgI0I9-ONvz7zdQqW8" />
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+	    google_ad_client: "ca-pub-3721559613110931",
+	    enable_page_level_ads: true
+	  });
+	</script>
 	<title>Values in Design | Disclaimer</title>
 	<link rel="profile" href="http://gmpg.org/xfn/11" />
 	<link rel="pingback" href="https://valuesindesign.wordpress.com/xmlrpc.php" />
