--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
 <link rel='dns-prefetch' href='https://s0.wp.com/' />
 <link rel="alternate" type="application/rss+xml" title="Values in Design 2019 &raquo; Feed" href="feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="Values in Design 2019 &raquo; Comments Feed" href="comments/feed/index.html" />
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<script>
-	  (adsbygoogle = window.adsbygoogle || []).push({
-	    google_ad_client: "ca-pub-3721559613110931",
-	    enable_page_level_ads: true
-	  });
-	</script>
 	<script type="text/javascript">
 		/* <![CDATA[ */
 		function addLoadEvent(func) {
@@ -457,7 +450,17 @@ body.custom-background { background-color: #F1EBEB; }
 <p>This new site is a community resource for the study and implementation of values in design (VID), reflecting a broad spectrum of theories, methodologies and disciplinary approaches. We invite contributions from researchers, practitioners, and public interest advocates. Please come back often and watch the site grow! &nbsp;</p>
 
 <p>Support for the development of this website was provided by the NSF for the NSF EAGER: Values in Design in the Future Internet Architecture, CNS/NetS 1058333 and the Intel Science and Technology Center for Social Computing.</p></div></div>
-		</aside><aside id="linkcat-247076664" class="widget widget_links"><h6 class="widget-title">Links of Interest</h6>
+		</aside><aside><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Default display ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4953354000641335"
+     data-ad-slot="8810429595"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></aside><aside id="linkcat-247076664" class="widget widget_links"><h6 class="widget-title">Links of Interest</h6>
 	<ul class='xoxo blogroll'>
 <li><a href="http://laboratorium.net/" title="James Grimmelmann">The Laboratorium</a></li>
 <li><a href="http://www.michaelzimmer.org/" target="_blank">Michael Zimmer</a></li>
