--- a/about-2/index.html
+++ b/about-2/index.html
@@ -256,6 +256,17 @@ body.custom-background { background-color: #F1EBEB; }
 <div id="jp-post-flair" class="sharedaddy sd-like-enabled sd-sharing-enabled"><div class='sharedaddy sd-block sd-like jetpack-likes-widget-wrapper jetpack-likes-widget-unloaded' id='like-post-wrapper-23966987-51-5ce77d7e05404' data-src='//widgets.wp.com/likes/index.html?ver=20190321#blog_id=23966987&amp;post_id=51&amp;origin=valuesindesign.wordpress.com&amp;obj_id=23966987-51-5ce77d7e05404' data-name='like-post-frame-23966987-51-5ce77d7e05404'><h3 class='sd-title'>Like this:</h3><div class='likes-widget-placeholder post-likes-widget-placeholder' style='height: 55px;'><span class='button'><span>Like</span></span> <span class="loading">Loading...</span></div><span class='sd-text-color'></span><a class='sd-link-color'></a></div></div>							</div><!-- .entry-content -->
 		</article><!-- #post -->
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Default display ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4953354000641335"
+     data-ad-slot="8810429595"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 <div id="comments" class="comments-area">
 
