add Gauges code

--- a/index.html
+++ b/index.html
@@ -550,6 +550,20 @@ if ( 'object' === typeof wpcom_mobile_user_agent_info ) {
 	
 }
 </script>	<div id="wp_footer_action"></div>
+<script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '5e4b2cfb2b39e538404d07f2');
+    t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+    t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
 </body>
 </html>
 <!--
